--- a/Vienna/Resources/Localizable.xcstrings
+++ b/Vienna/Resources/Localizable.xcstrings
@@ -661,7 +661,8 @@
             "value" : "%1$@, %2$@"
           }
         }
-      }
+      },
+      "shouldTranslate" : false
     },
     "%d new articles retrieved" : {
       "localizations" : {
@@ -8352,9 +8353,6 @@
         }
       }
     },
-    "Development Options" : {
-      "comment" : "Do not localize"
-    },
     "Do not show this warning again" : {
       "comment" : "Title of a checkbox on an alert",
       "localizations" : {
@@ -13814,12 +13812,6 @@
           }
         }
       }
-    },
-    "Log Formatting Strings" : {
-      "comment" : "Do not localize"
-    },
-    "Log Predicate String" : {
-      "comment" : "Do not localize"
     },
     "Make sure the username and password needed to access the Open Reader server are correctly set in Vienna's preferences. Also check your network access." : {
       "localizations" : {
